--- a/products/earring-shell.html
+++ b/products/earring-shell.html
@@ -3,19 +3,19 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>The Soul Thief pendant · EDELHART</title>
-  <meta name="description" content="The Soul Thief pendant — playful and interlocking design." />
-  <link rel="icon" type="image/png" href="../img/favicon.png" />
+  <title>EE female earring — black rhodium · EDELHART</title>
+  <meta name="description" content="EE female earring — black rhodium — bold dark finish. Signature design for everyday elegance." />
+  <link rel="icon" type="image/png" href="./img/favicon.png" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Playfair+Display:wght@600&family=Dancing+Script:wght@700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="../css/styles.css" />
+  <link rel="stylesheet" href="./css/styles.css" />
 </head>
 <body>
 <header id="site-header">
   <div class="wrap nav">
-    <a href="../index.html#home" class="brand" aria-label="EDELHART Home">
-      <img src="../img/logo.png" alt="EDELHART Logo" class="navbar-logo">
+    <a href="./index.html#home" class="brand" aria-label="EDELHART Home">
+      <img src="./img/logo.png" alt="EDELHART Logo" class="navbar-logo">
       <span class="brand-word">EDELHART</span>
     </a>
     <nav class="menu" aria-label="Main">
@@ -32,17 +32,17 @@
             </svg>
           </button>
           <div class="drop-menu" role="menu">
-            <a href="../collections/sss.html" role="menuitem">SSS</a>
-            <a href="../collections/whispering-a.html" role="menuitem">Whispering A</a>
-            <a href="../collections/ECHO.html" role="menuitem">ECHO</a>
+            <a href="./collections/sss.html" role="menuitem">SSS</a>
+            <a href="./collections/whispering-a.html" role="menuitem">Whispering A</a>
+            <a href="./collections/ECHO.html" role="menuitem">ECHO</a>
           </div>
         </div>
         <span class="sep">·</span>
-        <a href="../index.html#products">All Products</a>
+        <a href="./index.html#products">All Products</a>
         <span class="sep">·</span>
-        <a href="../index.html#contact">Contact</a>
+        <a href="./index.html#contact">Contact</a>
         <span class="sep">·</span>
-        <a href="../index.html#about">About</a>
+        <a href="./index.html#about">About</a>
       </div>
 
       <div class="nav-utilities" aria-label="Cart and currency">
@@ -59,19 +59,19 @@
   </div>
 </header>
 
-<main class="product-page" aria-label="Product page" data-product-slug="earring-shell">
+<main class="product-page" aria-label="Product page" data-product-slug="ee-female-earring-br">
   <div class="wrap">
     <nav class="breadcrumbs" aria-label="Breadcrumb">
-      <a href="../index.html#collections">Collections</a>
-      <a href="../collections/sss.html">SSS</a>
-      <span aria-current="page">The Soul Thief pendant</span>
+      <a href="./index.html#collections">Collections</a>
+      <a href="./collections/ECHO.html">ECHO</a>
+      <span aria-current="page">EE female earring — black rhodium</span>
     </nav>
 
-    <a class="page-back" href="../index.html#products" aria-label="Back to catalog">Back to catalog</a>
+    <a class="page-back" href="./index.html#products" aria-label="Back to catalog">Back to catalog</a>
 
     <div class="product">
       <div>
-        <div class="product-gallery" data-images="">
+        <div class="product-gallery" data-images="./img/products/EE-female-earring-br/EE-female-earring-br-1.jpeg,./img/products/EE-female-earring-br/EE-female-earring-br-2.jpeg">
           <div class="slides"></div>
           <button class="slider-btn slider-prev" aria-label="Previous">‹</button>
           <button class="slider-btn slider-next" aria-label="Next">›</button>
@@ -83,31 +83,76 @@
       </div>
 
       <aside class="checkout">
-        <div class="title">Loading...</div>
-        <div class="price" data-price-vnd="0">Price on request</div>
+        <div class="title">EE female earring — black rhodium</div>
+        <div class="price" data-price-vnd="10000">₫10,000</div>
 
-        <form data-product="">
+        <form data-product="EE female earring — black rhodium">
+          <div>
+            <label for="metal">Metal</label>
+            <select id="metal" name="metal">
+              <option>Black Rhodium</option>
+              <option>E-Silver</option>
+              <option>14K Gold</option>
+            </select>
+          </div>
+
+          <div>
+            <label for="stone">Stone</label>
+            <select id="stone" name="stone">
+              <option>OG (original design)</option>
+              <option>Diamond</option>
+              <option>Other gemstone</option>
+            </select>
+          </div>
+
+          <div>
+            <label for="qty">Quantity</label>
+            <select id="qty" name="qty">
+              <option>1</option>
+              <option>2</option>
+              <option>3</option>
+            </select>
+          </div>
+
           <div class="actions">
             <button type="button" class="btn add-to-cart">Add to cart</button>
-            <a href="https://wa.me/84944445084" class="btn primary" target="_blank" rel="noopener" aria-label="Order via WhatsApp">
+            <a href="https://wa.me/84944445084?text=Hello%20EDELHART%2C%20I%27m%20interested%20in%20the%20EE%20female%20earring%20%E2%80%94%20black%20rhodium."
+               class="btn primary" target="_blank" rel="noopener noreferrer" aria-label="Order via WhatsApp" title="Order via WhatsApp">
+              <svg viewBox="0 0 24 24" fill="currentColor" width="16" height="16" aria-hidden="true">
+                <path d="M12 2a10 10 0 00-8 16.1L3 22l3.9-1A10 10 0 1012 2zm5.2 14.2c-.2.6-1.2 1.1-1.7 1.1-.5 0-1 .2-3.3-1.1-2.8-1.6-4.5-4.6-4.6-4.8-.2-.3-1.1-1.5-1.1-2.8 0-1.2.6-1.8.9-2 .3-.2.8-.3 1-.3h.7c.2 0 .5 0 .7.6.3.7 1 2.4 1 2.5s.1.4 0 .6c-.1.2-.2.3-.4.5-.2.2-.4.5-.6.6-.2.2-.4.4-.2.7.2.3.9 1.5 2.1 2.4 1.5 1.1 2.7 1.5 3.1 1.7.3.1.6.1.8 0 .2-.1 1.3-.6 1.5-.8.2-.1.4-.2.7-.1.2.1 1.1.5 1.3.6.2.1.3.1.4.2.1 0 .1.6-.1 1.1z"/>
+              </svg>
               WhatsApp
             </a>
-            <button type="button" class="btn outline copy-order" data-platform="Instagram" aria-label="Copy order details for Instagram">
+            <button type="button" class="btn outline copy-order" data-platform="Instagram" aria-label="Copy order details for Instagram" title="Copy order details for Instagram">
+              <svg viewBox="0 0 24 24" fill="currentColor" width="16" height="16" aria-hidden="true">
+                <path d="M7 2h10a5 5 0 015 5v10a5 5 0 01-5 5H7a5 5 0 01-5-5V7a5 5 0 015-5zm5 5a5 5 0 100 10 5 5 0 000-10zm6-1a1 1 0 100 2 1 1 0 000-2zm-6 3a3 3 0 110 6 3 3 0 010-6z"/>
+              </svg>
               Copy cart & Inquire on Instagram
             </button>
-            <button type="button" class="btn outline copy-order" data-platform="Facebook" aria-label="Copy order details for Facebook">
+            <button type="button" class="btn outline copy-order" data-platform="Facebook" aria-label="Copy order details for Facebook" title="Copy order details for Facebook">
+              <svg viewBox="0 0 24 24" fill="currentColor" width="16" height="16" aria-hidden="true">
+                <path d="M22 12a10 10 0 10-11.6 9.9v-7h-2.3V12h2.3V9.7c0-2.3 1.4-3.6 3.5-3.6 1 0 2 .2 2 .2v2.2H15c-1.1 0-1.5.7-1.5 1.4V12h2.6l-.4 2.9h-2.2v7A10 10 0 0022 12z"/>
+              </svg>
               Copy cart & Inquire on Facebook
             </button>
+            <a href="https://maps.google.com/?q=483/11+Le+Van+Sy+Street,+Ward+Nhieu+Loc,+Ho+Chi+Minh+City,+Vietnam"
+               class="btn outline" target="_blank" rel="noopener noreferrer" aria-label="Find us on Google Maps" title="Find us on Google Maps">
+              <svg viewBox="0 0 24 24" fill="currentColor" width="16" height="16" aria-hidden="true">
+                <path d="M12 2a7 7 0 00-7 7c0 5.2 7 13 7 13s7-7.8 7-13a7 7 0 00-7-7zm0 9.5a2.5 2.5 0 110-5 2.5 2.5 0 010 5z"/>
+              </svg>
+              Location
+            </a>
           </div>
-          <p class="meta">Bespoke and alternate materials are available; </p>
         </form>
+
+        <p class="meta">Should you desire a rendition of this design in alternative materials or hues—or a bespoke creation tailored exclusively for you—please contact us directly.</p>
       </aside>
     </div>
 
     <div class="product-page-content">
       <div class="product-description">
         <h3>About This Piece</h3>
-        <p>Details load dynamically from product data.</p>
+        <p>The EE female earring embodies our signature aesthetic — refined minimalism with a statement edge. Crafted in black rhodium with bold dark finish, this piece features signature design for everyday elegance. Each earring is hand-finished to ensure exceptional quality and lasting beauty.</p>
       </div>
 
       <section aria-label="Catalogue">
@@ -118,20 +163,20 @@
 
         <div class="collage-wrapper">
           <div class="collage-surround">
-            <img src="../img/models/5.jpeg" alt="Model portrait with ring" loading="lazy" decoding="async" class="collage-img">
-            <img src="../img/models/6.jpeg" alt="Hands with multiple rings" loading="lazy" decoding="async" class="collage-img">
-            <img src="../img/models/7.jpeg" alt="Pendant layered styling" loading="lazy" decoding="async" class="collage-img">
-            <img src="../img/models/8.jpeg" alt="Necklace in motion" loading="lazy" decoding="async" class="collage-img">
-            <img src="../img/models/9.jpeg" alt="Earring editorial" loading="lazy" decoding="async" class="collage-img">
-            <img src="../img/models/10.jpeg" alt="Bracelet detail" loading="lazy" decoding="async" class="collage-img">
+            <img src="./img/models/5.jpeg" alt="Model portrait with ring" loading="lazy" decoding="async" class="collage-img">
+            <img src="./img/models/6.jpeg" alt="Hands with multiple rings" loading="lazy" decoding="async" class="collage-img">
+            <img src="./img/models/7.jpeg" alt="Pendant layered styling" loading="lazy" decoding="async" class="collage-img">
+            <img src="./img/models/8.jpeg" alt="Necklace in motion" loading="lazy" decoding="async" class="collage-img">
+            <img src="./img/models/9.jpeg" alt="Earring editorial" loading="lazy" decoding="async" class="collage-img">
+            <img src="./img/models/10.jpeg" alt="Bracelet detail" loading="lazy" decoding="async" class="collage-img">
           </div>
 
           <div class="featured-strip collage-main">
             <div class="featured-track">
-              <div class="feat-slide"><img src="../img/models/model-ring-sss.jpeg" alt="Model wearing ring, close-up" decoding="async"></div>
-              <div class="feat-slide"><img src="../img/models/2.jpeg" alt="Model with ring detail, side light" decoding="async"></div>
-              <div class="feat-slide"><img src="../img/models/3.jpeg" alt="Necklace on model, collarbone" decoding="async"></div>
-              <div class="feat-slide"><img src="../img/models/4.jpeg" alt="Earring on model, profile" decoding="async"></div>
+              <div class="feat-slide"><img src="./img/models/model-ring-sss.jpeg" alt="Model wearing ring, close-up" decoding="async"></div>
+              <div class="feat-slide"><img src="./img/models/2.jpeg" alt="Model with ring detail, side light" decoding="async"></div>
+              <div class="feat-slide"><img src="./img/models/3.jpeg" alt="Necklace on model, collarbone" decoding="async"></div>
+              <div class="feat-slide"><img src="./img/models/4.jpeg" alt="Earring on model, profile" decoding="async"></div>
             </div>
 
             <button class="slider-btn slider-prev" type="button" aria-label="Previous image">‹</button>
@@ -166,7 +211,7 @@
 <footer>
   <div class="wrap foot">
     <small>© <span id="year"></span> EDELHART.</small>
-    <small><a href="../index.html#home">Back to home ↑</a></small>
+    <small><a href="./index.html#home">Back to home ↑</a></small>
   </div>
 </footer>
 
@@ -184,7 +229,7 @@
     <footer class="cart-footer">
       <div class="cart-summary">
         <span>Total</span>
-        <span class="cart-total" data-price-vnd="0">Price on request</span>
+        <span class="cart-total" data-price-vnd="10000">₫10,000</span>
       </div>
       <a class="btn primary cart-checkout" href="https://wa.me/84944445084" target="_blank" rel="noopener">
         Send order via WhatsApp
@@ -197,8 +242,8 @@
 
 <button id="back-to-top" aria-label="Back to top">↑</button>
 
-<script src="../js/products-data.js" defer></script>
-<script src="../js/currency-manager.js" defer></script>
-<script src="../js/app.js" defer></script>
+<script src="./js/products-data.js" defer></script>
+<script src="./js/currency-manager.js" defer></script>
+<script src="./js/app.js" defer></script>
 </body>
 </html>
